--- a/assignments/graph similarities/chapter.ipynb
+++ b/assignments/graph similarities/chapter.ipynb
@@ -9,38 +9,12 @@
     "\n",
     "Goal of today's class:\n",
     "\n",
-    "1. Understand the basic concept of graph similarity and graph isomorphism\n",
-    "2. Implement and analyze different similarity measures\n",
+    "1. Understand the basic concept of graph similarity and the difference between descriptors and metrics\n",
+    "2. Implement a few similarity measures\n",
     "3. Understand that different measures give us different information and may be appropriate in different settings\n",
+    "4. Appreciate some of the main problems that graph distances can help to address\n",
     "\n",
-    "This lesson draws heavily on [Tantardini et al., 2019](https://doi.org/10.1038/s41598-019-53708-y), [Wills & Meyer, 2020](https://doi.org/10.1371/journal.pone.0228728) and [Hartle et al., 2020](https://doi.org/10.1098/rspa.2019.0744)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e35db28-04d2-4258-893c-68b3984fdf60",
-   "metadata": {},
-   "source": [
-    "### We want your final projects to showcase your ability to distill the following:\n",
-    "1. Your understanding of a topic not covered in class\n",
-    "2. Your accuracy in creating *correct* code around your topic, along with a strong reference list\n",
-    "3. Your ability to convey your understanding via:\n",
-    "    - A) Chunking the information into a single lesson that builds on itself (e.g. breaking down complex functions into parts, putting the pieces together, using different examples to illustrate your methods)\n",
-    "    - B) Good examples / visuals / writeups of what results produced during the lesson / datasets used to illustrate your concept\n",
-    "    - C) At least one interactive component (i.e., the \"Your Turn!\" in our lessons)\n",
-    "\n",
-    "Much like in our lessons, it's okay to include more than you imagine covering in a (hypothetical) 90 minute class period. Be sure to indicate what sections of your chapter are \"advanced topics\", and always include relevant citations or motivation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "50bfb469-4062-4ab8-ae7c-aca8cf72697d",
-   "metadata": {},
-   "source": [
-    "## Graph isomorphism and exact graph matching\n",
-    "- Explain isomorphism with pictures\n",
-    "- Touch on early examples of exact graph matching (eg. graph edit distance, maximum common subgraph)\n",
-    "- Discuss computational challenges of exact graph matching and the move towards inexact graph matching"
+    "This lesson draws on [Tantardini et al., 2019](https://doi.org/10.1038/s41598-019-53708-y), [Wills & Meyer, 2020](https://doi.org/10.1371/journal.pone.0228728) and [Hartle et al., 2020](https://doi.org/10.1098/rspa.2019.0744) "
    ]
   },
   {
@@ -50,17 +24,21 @@
    "source": [
     "## What is graph distance?\n",
     "\n",
-    "Graphs are complex, high dimensional objects. However sometimes we just want to ask something like: '_How similar are these two graphs?_'. Graph distances refer to a host of methods which attempt to answer this question by devising some function which takes two graphs as inputs and returns a single number representing how similar or different they are. In other words, given $G_1$ and $G_2$, we seek a function $D$ such that \n",
+    "Graphs are complex, high dimensional objects. However sometimes we just want to ask something like: '_How similar are these two graphs?_'. Graph distances refer to a host of methods which attempt to answer this question by devising some function which takes two graphs as inputs and returns a single number representing how dissimilar they are. Such functions tend to have two components:\n",
+    "1. A **descriptor**: the descriptor extracts some property or properties of the graph that we believe to be important\n",
+    "2. A **metric**: the metric compares the descriptors of both graphs giving a distance\n",
     "\n",
-    "$$D(G_1, G_2) = d$$ \n",
+    "In other words, given $G_1$ and $G_2$, we seek a descriptor $Q$ and a metric $D$ such that \n",
     "\n",
-    "where d is the distance between the two graphs. Of course, in the process of reducing a graph to a single number, information is going to be lost, no matter how ingenious your graph distance function is. Many, many graph distance measures have been proposed which each claim their own strangths.\n",
+    "$$D(Q(G_1), Q(G_2)) = d$$ \n",
     "\n",
+    "where d is the distance between the two graphs. The best way to do this is not straightforward because graphs are multidimensional objects which have lots of properties and it is not clear which properties are most 'important' or with which metric they should be compared. As a result, many, many graph distance measures have been proposed. \n",
+    "\n",
+    "\n",
+    "<!-- \n",
     "There are two broad categories of problems when it comes to comparing graphs. Firstly, we may want to compare graphs where the each node in $G_1$ maps on to a node in $G_2$ (**Known Node Correspondence**). For example we may be interested in different types of social interaction that occur between the same set of people, or how the flight patterns between the same set of airports changes over time or between different airlines. Secondly, we may be interested in comparing graphs where there isn't a precise mapping of nodes between the two graphs (**Unknown Node Correspondence**). For example if we wanted to know how similar are the commuting patterns between Boston and San Diego, or how the interaction structure of different protein complexes compares. Or we may be interested in comparing graphs of different sizes. There are different measures for tackling each of these problems. In general, measures for comparing graphs of unknown node correspondence can also be used for graphs with known node correspondence but not vice versa.\n",
     "\n",
-    "Distance measures also differ in the types of graph they work on. Not all measures will work on directed or weighted graphs.\n",
-    "\n",
-    "In reality many graph distances are not true metrics because\n",
+    "Distance measures also differ in the types of graph they work on. Not all measures will work on directed or weighted graphs. -->\n",
     "________"
    ]
   },
@@ -69,10 +47,179 @@
    "id": "13293fd0-5fa3-4b43-9ca3-c38cfba402fa",
    "metadata": {},
    "source": [
-    "## Applications of graph distances\n",
+    "## Why do we care?\n",
     "1. Temporal anomaly detection:\n",
-    "2. Graph classification and clustering:\n",
-    "3. Similar nodes:"
+    "3. Graph classification and clustering:\n",
+    "4. Similar nodes:\n",
+    "5. Within ensemble graph distance:\n",
+    "6. Between ensemble graph distance:\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23cf2fd9-0692-4ac2-972f-40611c2c86f1",
+   "metadata": {},
+   "source": [
+    "## Some commonly used descriptors\n",
+    "\n",
+    " 1. Adjacency matrix\n",
+    "\n",
+    " 3. Degree distribution\n",
+    "\n",
+    " 5. Node affinity matrix (Fast Belief Propagation)\n",
+    " \n",
+    " 6. Eigenvalue decomposition\n",
+    "\n",
+    " 8. Network portrait\n",
+    "\n",
+    " 10. Communicability sequence  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cd13748-94e2-43e8-985e-4703844c33e6",
+   "metadata": {},
+   "source": [
+    "## Some commonly used metrics\n",
+    "\n",
+    "1. Euclidian distance\n",
+    "\n",
+    "2. Matusita distance\n",
+    "\n",
+    "3. Jensen-Shannon divergence\n",
+    "\n",
+    "4. Jaccard distance\n",
+    "\n",
+    "5. Hamming distance\n",
+    "\n",
+    "6. Canberra distance\n",
+    "\n",
+    "Brief note about how you could theoretically pair any descriptor with any metric.\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5072f6ef-5d54-4081-ade8-6ba34f4fe5f6",
+   "metadata": {},
+   "source": [
+    "## Distance measure 1: Frobenius distance (adjacency matrix + Euclidian distance)\n",
+    "\n",
+    "$$ \\sqrt{\\sum_{i,j} \\lvert A_{ij}^1 - A_{ij}^2 \\rvert ^2 }$$\n",
+    "- Intuition\n",
+    "- Intro netrd \n",
+    "- Quick demo (test some properties we might expect a distance measure to have eg. symmetry, identity, perturbation test)\n",
+    "\n",
+    "<img src=\"figs/perturbation.png\" alt=\"Perturbation\" width=\"400\"/>\n",
+    "(Tantardini et al., 2019)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce5656a2-cd98-4578-8749-77cde2bf9192",
+   "metadata": {},
+   "source": [
+    "## Distance measure 2: DeltaCon (node affinity + Matusita distance)\n",
+    "$$s_{ij} = [I - \\epsilon^2 D - \\epsilon A]^{-1}$$\n",
+    "$$ d = \\sqrt{\\sum_{i=1}^N \\sum_{j=1}^N \\sqrt{s_{ij}^1} - \\sqrt{s_{ij}^2}}$$\n",
+    "- Intuition\n",
+    "- Demo\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0a58aac-109e-4a7d-8443-2e13e52a461a",
+   "metadata": {},
+   "source": [
+    "## Distance measure 3: Adjacency spectral distance?\n",
+    "$$ d = \\sqrt{\\sum_{i=1}^n (\\lambda_i^A - \\lambda_i^{A'})^2}$$\n",
+    "- Intuition\n",
+    "- Intro NetComp\n",
+    "- Demo\n",
+    "- Explore how different eigenvalues tell us about different levels of structure in the graph\n",
+    "\n",
+    "\n",
+    "<img src=\"figs/spectral.png\" alt=\"Spectral\" width=\"600\"/>\n",
+    "(Wills & Meyer 2020)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bb49899-ec46-42c0-9caa-adf5af8b0326",
+   "metadata": {},
+   "source": [
+    "## Problem 1: Graph classification\n",
+    "- Data: brain graphs with metadata/ or synthetic data generated from different graph ensembles\n",
+    "- How well does each distance measure identify the group the graph came from?\n",
+    "\n",
+    "<img src=\"figs/classification.png\" alt=\"Classification\" width=\"600\"/>\n",
+    "(Tantardini et al., 2019)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d991567-3894-4526-8b29-233acb30e3c7",
+   "metadata": {},
+   "source": [
+    "## Problem 2: Anomaly detection\n",
+    "- Data: longitudinal mobility data?/ any temporal network\n",
+    "- How well does each distance measure identify anomalies eg snowstorms, lockdowns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85a60020-50d7-40c0-ae89-01c9576b6a9d",
+   "metadata": {},
+   "source": [
+    "## Problem 3: Within ensemble graph distance and desirable distance properties\n",
+    "- Data: synthetic data\n",
+    "- Discuss properties we might expect a distance measure to have for different ensembles (eg for ER: collapse to 0 at p=0 or 1, max at p=0.5, symmetric)\n",
+    "\n",
+    "<img src=\"figs/wegd.png\" alt=\"wegd\" width=\"400\"/>\n",
+    "(Hartle et al., 2020)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "121bdbb6-c2f4-4522-ae76-c441f1341c89",
+   "metadata": {},
+   "source": [
+    "## If there's time: graphlet based methods\n",
+    "\n",
+    "<img src=\"figs/graphlets.png\" alt=\"graphlets\" width=\"600\"/>\n",
+    "(Tantardini et al., 2019)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50bfb469-4062-4ab8-ae7c-aca8cf72697d",
+   "metadata": {},
+   "source": [
+    "## If there's time: Time machine: Graph isomorphism and exact graph matching\n",
+    "- Explain isomorphism with pictures\n",
+    "- Touch on early examples of exact graph matching (eg. graph edit distance, maximum common subgraph)\n",
+    "- Discuss computational challenges of exact graph matching and the move towards inexact graph matching"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68ad0e8-41c9-4c09-bb32-647db7767439",
+   "metadata": {},
+   "source": [
+    "_______\n",
+    "\n",
+    "## References and further resources:\n",
+    "\n",
+    "1. Hartle, H., Klein, B., McCabe, S., Daniels, A., St-Onge, G., Murphy, C., Hébert-Dufresne, L., 2020. Network comparison and the within-ensemble graph distance. Proc. R. Soc. A. 476, 20190744. https://doi.org/10.1098/rspa.2019.0744\n",
+    "2. Soundarajan, S., Eliassi-Rad, T., Gallagher, B., 2014. A Guide to Selecting a Network Similarity Method, in: Proceedings of the 2014 SIAM International Conference on Data Mining. Presented at the Proceedings of the 2014 SIAM International Conference on Data Mining, Society for Industrial and Applied Mathematics, pp. 1037–1045. https://doi.org/10.1137/1.9781611973440.118\n",
+    "3. Tantardini, M., Ieva, F., Tajoli, L., Piccardi, C., 2019. Comparing methods for comparing networks. Sci Rep 9, 17557. https://doi.org/10.1038/s41598-019-53708-y\n",
+    "4. Wills, P., Meyer, F.G., 2020. Metrics for graph comparison: A practitioner’s guide. PLoS ONE 15, e0228728. https://doi.org/10.1371/journal.pone.0228728\n",
+    "5. Koutra, D., Vogelstein, J.T., Faloutsos, C., 2013. DeltaCon : A Principled Massive-Graph Similarity Function, in: Proceedings of the 2013 SIAM International Conference on Data Mining. Presented at the Proceedings of the 2013 SIAM International Conference on Data Mining, Society for Industrial and Applied Mathematics, pp. 162–170. https://doi.org/10.1137/1.9781611972832.18\n",
+    "6. Koutra, D., Shah, N., Vogelstein, J.T., Gallagher, B., Faloutsos, C., 2016. D elta C on: Principled Massive-Graph Similarity Function with Attribution. ACM Trans. Knowl. Discov. Data 10, 1–43. https://doi.org/10.1145/2824443\n",
+    "7. McCabe, S., Torres, L., LaRock, T., Haque, S., Yang, C.-H., Hartle, H., Klein, B., 2021. netrd: A library for network reconstruction and graph distances. JOSS 6, 2990. https://doi.org/10.21105/joss.02990\n",
+    "8. [netrd package](https://github.com/netsiphd/netrd/)\n",
+    "9. [NetComp package](https://github.com/peterewills/NetComp/tree/master)\n"
    ]
   },
   {
@@ -80,7 +227,7 @@
    "id": "fef1ae41-84be-4eed-9632-84697403c5df",
    "metadata": {},
    "source": [
-    "Types of distance measures:\n",
+    "<!-- There are lots and lots of graph distance measures. Here are a few:\n",
     "1. **Known node correspondence**\n",
     "    1. Matrix differences\n",
     "       1. Frobenius\n",
@@ -88,7 +235,7 @@
     "       3. Hamming\n",
     "       4. Canberra\n",
     "       5. Resistance perturbation?\n",
-    "    3. DeltaCon\n",
+    "    3. DeltaCon [5](https://doi.org/10.1137/1.9781611972832.18) [6](https://doi.org/10.1145/2824443)\n",
     "    4. Cut distance\n",
     "2. **Unknown node correspondence**\n",
     "   1. Spectral distances\n",
@@ -102,18 +249,7 @@
     "   9. Bayesian methods\n",
     "   10. Jensen-Shannon divergence\n",
     "   11. Entropy divergence\n",
-    "   12. NetSimile"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88df35c2-0a31-4ed0-a891-304fb442519c",
-   "metadata": {},
-   "source": [
-    "Important concepts\n",
-    "1. Known vs unknown node correspondence\n",
-    "2. Comparison within vs between graph ensembles\n",
-    "3. Local vs meso vs macro structure"
+    "   12. NetSimile -->"
    ]
   },
   {
@@ -282,35 +418,6 @@
     "\n",
     "$$ d = \\sqrt{\\sum_{i=1}^n (\\lambda_i^A - \\lambda_i^{A'})^2}$$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62afaf9b-aaa5-4abc-8ffc-891911d9c97f",
-   "metadata": {},
-   "source": [
-    "## 4. Portrait divergence/Graphlet based?\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a68ad0e8-41c9-4c09-bb32-647db7767439",
-   "metadata": {},
-   "source": [
-    "_______\n",
-    "\n",
-    "## References and further resources:\n",
-    "\n",
-    "1. Hartle, H., Klein, B., McCabe, S., Daniels, A., St-Onge, G., Murphy, C., Hébert-Dufresne, L., 2020. Network comparison and the within-ensemble graph distance. Proc. R. Soc. A. 476, 20190744. https://doi.org/10.1098/rspa.2019.0744\n",
-    "2. Soundarajan, S., Eliassi-Rad, T., Gallagher, B., 2014. A Guide to Selecting a Network Similarity Method, in: Proceedings of the 2014 SIAM International Conference on Data Mining. Presented at the Proceedings of the 2014 SIAM International Conference on Data Mining, Society for Industrial and Applied Mathematics, pp. 1037–1045. https://doi.org/10.1137/1.9781611973440.118\n",
-    "3. Tantardini, M., Ieva, F., Tajoli, L., Piccardi, C., 2019. Comparing methods for comparing networks. Sci Rep 9, 17557. https://doi.org/10.1038/s41598-019-53708-y\n",
-    "4. Wills, P., Meyer, F.G., 2020. Metrics for graph comparison: A practitioner’s guide. PLoS ONE 15, e0228728. https://doi.org/10.1371/journal.pone.0228728\n",
-    "5. Koutra, D., Vogelstein, J.T., Faloutsos, C., 2013. DeltaCon : A Principled Massive-Graph Similarity Function, in: Proceedings of the 2013 SIAM International Conference on Data Mining. Presented at the Proceedings of the 2013 SIAM International Conference on Data Mining, Society for Industrial and Applied Mathematics, pp. 162–170. https://doi.org/10.1137/1.9781611972832.18\n",
-    "\n",
-    "\n",
-    "\n",
-    "(Aim for 10+ useful citations)"
-   ]
   }
  ],
  "metadata": {
@@ -329,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
