--- a/assignments/graph similarities/chapter.ipynb
+++ b/assignments/graph similarities/chapter.ipynb
@@ -7,14 +7,27 @@
    "source": [
     "# Graph Similarity Measures\n",
     "\n",
+    "Nima Moghaddas | PHYS 7332 Final Project\n",
+    "\n",
     "Goal of today's class:\n",
     "\n",
     "1. Understand the basic concept of graph similarity and the difference between descriptors and metrics\n",
-    "2. Implement a few similarity measures\n",
+    "2. Understand a few similarity measures, and become familiar with packages which implement them\n",
     "3. Understand that different measures give us different information and may be appropriate in different settings\n",
     "4. Appreciate some of the main problems that graph distances can help to address\n",
     "\n",
-    "This lesson draws on [Tantardini et al., 2019](https://doi.org/10.1038/s41598-019-53708-y), [Wills & Meyer, 2020](https://doi.org/10.1371/journal.pone.0228728) and [Hartle et al., 2020](https://doi.org/10.1098/rspa.2019.0744) "
+    "This lesson draws heavily on [Tantardini et al., 2019](https://doi.org/10.1038/s41598-019-53708-y), [Wills & Meyer, 2020](https://doi.org/10.1371/journal.pone.0228728) and [Hartle et al., 2020](https://doi.org/10.1098/rspa.2019.0744) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01a7f0a7-9229-4cb3-bfd1-891576009eca",
+   "metadata": {},
+   "source": [
+    "## Interactive activity\n",
+    "- Show three very simple graphs\n",
+    "- How would you rank them in terms of similarity?\n",
+    "- What properties do you think are important?"
    ]
   },
   {
@@ -22,7 +35,8 @@
    "id": "88316dd7-4fcf-49f6-bd28-fff4200bad0f",
    "metadata": {},
    "source": [
-    "## What is graph distance?\n",
+    "## Introduction\n",
+    "### What is graph distance?\n",
     "\n",
     "Graphs are complex, high dimensional objects. However sometimes we just want to ask something like: '_How similar are these two graphs?_'. Graph distances refer to a host of methods which attempt to answer this question by devising some function which takes two graphs as inputs and returns a single number representing how dissimilar they are. Such functions tend to have two components:\n",
     "1. A **descriptor**: the descriptor extracts some property or properties of the graph that we believe to be important\n",
@@ -34,12 +48,13 @@
     "\n",
     "where d is the distance between the two graphs. The best way to do this is not straightforward because graphs are multidimensional objects which have lots of properties and it is not clear which properties are most 'important' or with which metric they should be compared. As a result, many, many graph distance measures have been proposed. \n",
     "\n",
-    "\n",
+    "- Known vs unknown node correspondence\n",
+    "- Directed vs undirected graphs\n",
+    "- Weighted vs unweighted graphs\n",
     "<!-- \n",
     "There are two broad categories of problems when it comes to comparing graphs. Firstly, we may want to compare graphs where the each node in $G_1$ maps on to a node in $G_2$ (**Known Node Correspondence**). For example we may be interested in different types of social interaction that occur between the same set of people, or how the flight patterns between the same set of airports changes over time or between different airlines. Secondly, we may be interested in comparing graphs where there isn't a precise mapping of nodes between the two graphs (**Unknown Node Correspondence**). For example if we wanted to know how similar are the commuting patterns between Boston and San Diego, or how the interaction structure of different protein complexes compares. Or we may be interested in comparing graphs of different sizes. There are different measures for tackling each of these problems. In general, measures for comparing graphs of unknown node correspondence can also be used for graphs with known node correspondence but not vice versa.\n",
     "\n",
-    "Distance measures also differ in the types of graph they work on. Not all measures will work on directed or weighted graphs. -->\n",
-    "________"
+    "Distance measures also differ in the types of graph they work on. Not all measures will work on directed or weighted graphs. -->\n"
    ]
   },
   {
@@ -47,13 +62,14 @@
    "id": "13293fd0-5fa3-4b43-9ca3-c38cfba402fa",
    "metadata": {},
    "source": [
-    "## Why do we care?\n",
+    "### Why do we care?\n",
     "1. Temporal anomaly detection:\n",
     "3. Graph classification and clustering:\n",
-    "4. Similar nodes:\n",
-    "5. Within ensemble graph distance:\n",
-    "6. Between ensemble graph distance:\n",
-    "___"
+    "4. Node alignment:\n",
+    "5. Typicality in graphs:\n",
+    "_____\n",
+    "<!-- 5. Within ensemble graph distance:\n",
+    "6. Between ensemble graph distance: -->\n"
    ]
   },
   {
@@ -104,12 +120,14 @@
    "id": "5072f6ef-5d54-4081-ade8-6ba34f4fe5f6",
    "metadata": {},
    "source": [
-    "## Distance measure 1: Frobenius distance (adjacency matrix + Euclidian distance)\n",
+    "## Known node correspondence\n",
+    "### Distance measure 1: Frobenius distance (adjacency matrix + euclidian distance)\n",
     "\n",
     "$$ \\sqrt{\\sum_{i,j} \\lvert A_{ij}^1 - A_{ij}^2 \\rvert ^2 }$$\n",
     "- Intuition\n",
+    "- Quick demo/your turn (test some properties we might expect a distance measure to have eg. symmetry, identity, perturbation test)\n",
+    "- Limitations\n",
     "- Intro netrd \n",
-    "- Quick demo (test some properties we might expect a distance measure to have eg. symmetry, identity, perturbation test)\n",
     "\n",
     "<img src=\"figs/perturbation.png\" alt=\"Perturbation\" width=\"400\"/>\n",
     "(Tantardini et al., 2019)"
@@ -120,11 +138,11 @@
    "id": "ce5656a2-cd98-4578-8749-77cde2bf9192",
    "metadata": {},
    "source": [
-    "## Distance measure 2: DeltaCon (node affinity + Matusita distance)\n",
+    "## Distance measure 2: DeltaCon (node affinity + matusita distance)\n",
     "$$s_{ij} = [I - \\epsilon^2 D - \\epsilon A]^{-1}$$\n",
     "$$ d = \\sqrt{\\sum_{i=1}^N \\sum_{j=1}^N \\sqrt{s_{ij}^1} - \\sqrt{s_{ij}^2}}$$\n",
     "- Intuition\n",
-    "- Demo\n"
+    "- Demo (maybe show sensitivity to importance of edges or edge weights, or ability to identify important edges/nodes)\n"
    ]
   },
   {
@@ -132,7 +150,8 @@
    "id": "c0a58aac-109e-4a7d-8443-2e13e52a461a",
    "metadata": {},
    "source": [
-    "## Distance measure 3: Adjacency spectral distance?\n",
+    "# Unknown node correspondence\n",
+    "## Distance measure 3: Adjacency spectral distance (eigenvalue decomposition + euclidian distance)\n",
     "$$ d = \\sqrt{\\sum_{i=1}^n (\\lambda_i^A - \\lambda_i^{A'})^2}$$\n",
     "- Intuition\n",
     "- Intro NetComp\n",
@@ -141,7 +160,9 @@
     "\n",
     "\n",
     "<img src=\"figs/spectral.png\" alt=\"Spectral\" width=\"600\"/>\n",
-    "(Wills & Meyer 2020)  "
+    "(Wills & Meyer 2020)  \n",
+    "\n",
+    "-----"
    ]
   },
   {
@@ -154,7 +175,9 @@
     "- How well does each distance measure identify the group the graph came from?\n",
     "\n",
     "<img src=\"figs/classification.png\" alt=\"Classification\" width=\"600\"/>\n",
-    "(Tantardini et al., 2019)\n"
+    "(Tantardini et al., 2019)  \n",
+    "\n",
+    "____"
    ]
   },
   {
@@ -164,7 +187,10 @@
    "source": [
     "## Problem 2: Anomaly detection\n",
     "- Data: longitudinal mobility data?/ any temporal network\n",
-    "- How well does each distance measure identify anomalies eg snowstorms, lockdowns"
+    "- How well does each distance measure identify anomalies eg snowstorms, lockdowns\n",
+    "\n",
+    "\n",
+    "____"
    ]
   },
   {
@@ -185,10 +211,12 @@
    "id": "121bdbb6-c2f4-4522-ae76-c441f1341c89",
    "metadata": {},
    "source": [
-    "## If there's time: graphlet based methods\n",
+    "## If there's time or appendix: graphlet based methods\n",
     "\n",
     "<img src=\"figs/graphlets.png\" alt=\"graphlets\" width=\"600\"/>\n",
-    "(Tantardini et al., 2019)"
+    "(Tantardini et al., 2019)\n",
+    "\n",
+    "____"
    ]
   },
   {
@@ -196,7 +224,7 @@
    "id": "50bfb469-4062-4ab8-ae7c-aca8cf72697d",
    "metadata": {},
    "source": [
-    "## If there's time: Time machine: Graph isomorphism and exact graph matching\n",
+    "## If there's time or appendix: Graph isomorphism and exact graph matching\n",
     "- Explain isomorphism with pictures\n",
     "- Touch on early examples of exact graph matching (eg. graph edit distance, maximum common subgraph)\n",
     "- Discuss computational challenges of exact graph matching and the move towards inexact graph matching"
@@ -293,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0bbf1083-3ccc-41b5-8072-1cbef2fe4762",
    "metadata": {},
    "outputs": [],
@@ -306,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "15c7ec7d-1f2a-48ae-8710-a5b7be050b01",
    "metadata": {},
    "outputs": [],
@@ -331,10 +359,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "ebf51a46-1afe-4ad1-a5f3-70a6b22ff519",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$D(G_1, G_2) =$ None\n",
+      "$D(G_2, G_1) =$ None\n"
+     ]
+    }
+   ],
    "source": [
     "import networkx as nx\n",
     "g1 = nx.watts_strogatz_graph(500, 9, 0.05)\n",
@@ -355,10 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b9d59743-a058-436f-91e8-e5d51fbc10b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$D(G_1, G_1) =$ None\n"
+     ]
+    }
+   ],
    "source": [
     "g1 = nx.watts_strogatz_graph(500, 9, 0.05)\n",
     "g2 = g1.copy()\n",
@@ -376,10 +421,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1b574b9b-75aa-4171-b622-7ba18ee44a1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3882645231.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Your turn!\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "Your turn!\n",
     "\n",
@@ -418,6 +472,14 @@
     "\n",
     "$$ d = \\sqrt{\\sum_{i=1}^n (\\lambda_i^A - \\lambda_i^{A'})^2}$$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a393fbc-a18a-408c-8361-ecf265953ef3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -436,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
